--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
             border-radius: 10px;
             transition: opacity 0.3s ease;
             animation: fadeIn 1s ease-in-out;
+            width: 100%;
+            max-width: 200px;
         }
         .section img:hover {
             opacity: 0.8;
@@ -136,6 +138,55 @@
         .visible {
             opacity: 1;
             transform: translateY(0);
+        }
+
+        /* Media Queries */
+        @media (max-width: 768px) {
+            .header img {
+                width: 100px;
+                height: 100px;
+            }
+            .header h1 {
+                font-size: 2em;
+            }
+            .section h2 {
+                font-size: 1.2em;
+            }
+            .section ul li {
+                padding-left: 15px;
+            }
+            .section ul li::before {
+                font-size: 1em;
+            }
+        }
+
+        @media (max-width: 480px) {
+            body {
+                margin: 10px;
+            }
+            .container {
+                padding: 15px;
+            }
+            .header img {
+                width: 80px;
+                height: 80px;
+                margin-right: 10px;
+            }
+            .header h1 {
+                font-size: 1.8em;
+            }
+            .header p {
+                font-size: 0.9em;
+            }
+            .section h2 {
+                font-size: 1.1em;
+            }
+            .section ul li {
+                padding-left: 10px;
+            }
+            .section ul li::before {
+                font-size: 0.9em;
+            }
         }
     </style>
 </head>
