--- a/index.html
+++ b/index.html
@@ -243,7 +243,12 @@
             <h2>Aktivitas Senam</h2>
             <ul>
                 <li>Aktif berpartisipasi dalam senam rutin sejak tahun 2004 hingga sekarang, menunjukkan dedikasi dan komitmen yang kuat terhadap kesehatan dan kebugaran.</li>
-                <li>Saat ini, rutin menjadi instruktur senam sebanyak 2 kali dalam seminggu, membimbing peserta dengan semangat dan keahlian.</li>
+                <li>Saat ini, rutin menjadi instruktur senam sebanyak 2 kali dalam seminggu, membimbing peserta dengan semangat dan keahlian.
+                    <ul>
+                        <li>Mengajar di salah satu klub jantung sehat</li>
+                        <li>Mengajar di SMPN 89 Tj. Duren Utara, Kec. Grogol Petamburan, Kota Jakarta Barat</li>
+                    </ul>
+                </li>
                 <li>Senam hampir setiap hari, menjaga tubuh tetap bugar dan siap menghadapi tantangan baru.</li>
             </ul>
         </div>
